# RAG_Langchain

./: pyproject.toml
notebook/: document.ipynb  pdf_loader.ipynb
